add google pay example

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <li><a href="fraud-detection/braintree.html">Fraud detection (Braintree integration)</a></li>
         <li><a href="3d-secure/index.html">3-D Secure</a></li>
         <li><a href="vue/index.html">Vue</a></li>
+        <li><a href="google-pay/index.html">Google Pay</a></li>
       </ul>
     </main>
   </body>
