Adds a demo for auto-tabbing behavior

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         <li><a href="3d-secure/index.html">3-D Secure</a></li>
         <li><a href="vue/index.html">Vue</a></li>
         <li><a href="google-pay/index.html">Google Pay</a></li>
+        <li><a href="auto-tab/index.html">Auto-tabbing</a></li>
       </ul>
     </main>
   </body>
