--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
       <h1>Examples</h1>
       <ul>
         <li><a href="minimal/index.html">Minimal billing information</a></li>
+        <li><a href="elements-with-card-brand/index.html">Billing information with Card Brand</a></li>
+        <li><a href="elements/index.html">Billing Information using individual Recurly Elements</a></li>
         <li><a href="account-update/index.html">Account update</a></li>
         <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
         <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
