--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <li><a href="minimal/index.html">Minimal billing information</a></li>
         <li><a href="account-update/index.html">Account update</a></li>
         <li><a href="advanced-pricing/index.html">Advanced pricing features</a></li>
+        <li><a href="advanced-pricing/tiers.html">Advanced pricing with tier labels</a></li>
         <li><a href="advanced-pricing-items/index.html">Advanced pricing with items</a></li>
         <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
         <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
