--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
         <li><a href="advanced-tax/index.html">Advanced tax features</a></li>
         <li><a href="advanced-bank-account/index.html">Advanced bank account</a></li>
         <li><a href="apple-pay/index.html">Apple Pay</a></li>
+        <li><a href="apple-pay/shipping/index.html">Apple Pay shipping validation</a></li>
+        <li><a href="apple-pay/direct-tax/index.html">Apple Pay fetch tax</a></li>
+        <li><a href="apple-pay/advanced/index.html">Advanced Apple Pay</a></li>
         <li><a href="bank-redirect/index.html">Bank Redirect</a></li>
         <li><a href="paypal/index.html">PayPal</a></li>
         <li><a href="fraud-detection/recurly-kount.html">Fraud detection (Recurly and Kount direct integrations)</a></li>
@@ -35,6 +38,7 @@
         <li><a href="3d-secure/index.html">3-D Secure</a></li>
         <li><a href="vue/index.html">Vue</a></li>
         <li><a href="google-pay/index.html">Google Pay</a></li>
+        <li><a href="google-pay/direct-tax/index.html">Google Pay shipping with direct tax</a></li>
         <li><a href="auto-tab/index.html">Auto-tabbing</a></li>
       </ul>
     </main>
