Unify Alternative Payment Methods examples

--- a/public/alternative-payment-methods/completed.html
+++ b/public/alternative-payment-methods/completed.html
@@ -14,7 +14,7 @@
 
     <p>Transaction status in Recurly was completed with status "<span id="recurly-status"></span>".</p>
 
-    <a href="/">Back to home</a>
+    <a href="/alternative-payment-methods/index.html">Back to Alternative Payment Methods</a>
   </main>
 
   <script type="text/javascript">
