--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,7 @@
         <li><a href="google-pay/index.html">Google Pay</a></li>
         <li><a href="google-pay/direct-tax/index.html">Google Pay shipping with direct tax</a></li>
         <li><a href="auto-tab/index.html">Auto-tabbing</a></li>
-        <li><a href="alternative-payment-methods/boleto.html">Alternative Payment Methods - Boleto</a></li>
-        <li><a href="alternative-payment-methods/ideal.html">Alternative Payment Methods - iDEAL</a></li>
+        <li><a href="alternative-payment-methods/index.html">Alternative Payment Methods</a></li>
       </ul>
     </main>
   </body>
