--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <li><a href="auto-tab/index.html">Auto-tabbing</a></li>
         <li><a href="alternative-payment-methods/boleto.html">Alternative Payment Methods - Boleto</a></li>
         <li><a href="alternative-payment-methods/ideal.html">Alternative Payment Methods - iDEAL</a></li>
+        <li><a href="coBadged/index.html">Co-Badged</a></li>
       </ul>
     </main>
   </body>
